--- a/Lorem Ipsum Generator/index.html
+++ b/Lorem Ipsum Generator/index.html
@@ -12,7 +12,7 @@
         <h3>tired of boring lorem ipsum?</h3>
         <form class="lorem-form">
             <label for="amount">Paragraphs</label>
-            <input type="number" name="amount" id="amount"> <span>(max: 9)</span> 
+            <input type="number" name="amount" id="amount" min="0" max="9"> <span>(max: 9)</span> 
             <button type="submit">Generate</button>
         </form>
         <div class="container">
